--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natural Wine Club: Drink like you give a damn</title>
+    <meta name="description" content="Natural Wine Club: Natural wines delivered to your doorstep">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Natural Wine Club">
+    <meta property="og:description" content="Natural Wine Club: Natural wines delivered to your doorstep">
+    <meta property="og:image" content="https://example.com/og-image.jpg">
+    <meta property="og:url" content="https://naturalwineclub.co">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Natural Wine Club">
+    <meta name="twitter:description" content="Natural Wine Club: Natural wines delivered to your doorstep">
+    <meta name="twitter:image" content="https://example.com/twitter-card-image.jpg">
+
+    <title>Natural Wine Club: Natural wines delivered to your doorstep</title>
   </head>
   <body>
     <div id="root"></div>
