REFACTOR: Adding new og:image

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Natural Wine Club">
     <meta property="og:description" content="Natural Wine Club: Natural wines delivered to your doorstep">
-    <meta property="og:image" content="https://example.com/og-image.jpg">
+    <meta property="og:image" content="/og-image.jpg">
     <meta property="og:url" content="https://naturalwineclub.co">
     <meta property="og:type" content="website">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Natural Wine Club">
-    <meta name="twitter:description" content="Natural Wine Club: Natural wines delivered to your doorstep">
-    <meta name="twitter:image" content="https://example.com/twitter-card-image.jpg">
 
     <title>Natural Wine Club: Natural wines delivered to your doorstep</title>
   </head>
