--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Natural Wine Club: Natural wines delivered to your doorstep">
+    <meta
+      name="description"
+      content="Natural Wine Club: Natural wines delivered to your doorstep"
+    />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Natural Wine Club">
-    <meta property="og:description" content="Natural Wine Club: Natural wines delivered to your doorstep">
-    <meta property="og:image" content="/og-image.jpg">
-    <meta property="og:url" content="https://naturalwineclub.co">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Natural Wine Club" />
+    <meta
+      property="og:description"
+      content="Natural wines delivered to your doorstep"
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://naturalwineclub.co" />
+    <meta property="og:type" content="website" />
 
     <title>Natural Wine Club: Natural wines delivered to your doorstep</title>
   </head>
